# Driver_Drowsiness_Detection

./: Model_Training.ipynb  README.md  drowsiness_Dlib.py  model1.ipynb  model2.ipynb  model3.ipynb  prebuilt.py  tcnn_model.py
Face Detection/: drowsiness_Mediapipe.py  drowsiness_PlaySound.py  main.py  pyproject.toml
Model Finetuning/: ddd_train_mobilenet2.py
Object Detection/: Object Detection.ipynb
Other/: Dataset_list.txt
Pretrained Models Training Further/: ddd_train_convnext.py  ddd_train_efficient.py  ddd_train_mobilenet.py
app/: main.py  model.py  preprocess.py  test2.py  test3.py
basic detection/: driver_keypoint_marking.py  drowsiness_pytorch.py  drowsiness_pytorch2.py
demo/: script.ipynb
detection/: 6DOF.py
models/: 1st wave.json  dali_LSTM.py  dali_TemporalCNN.py  dali_Transformer.py  ddd_train_convnext2.py  ddd_train_dense2.py  ddd_train_efficientnet2.py  model.ipynb  tcan.py  tcnn.ipynb  temporal convolutional network.ipynb  vit_S.py  vit_b.py  vit_l.py
models/utils/: Base_Encoder.py  Base_LSTM.py  Base_TemporalCNN.py  Base_Transformer.py  fusion.ipynb  model.ipynb  sampler_Balance.py  sampler_BalanceEpoch.py  sampler_Sequential.py
preprocessing/: EAR_MAR_CALC.ipynb  EYE_crop.ipynb  EYE_nthuddd.ipynb  FACE_nthuddd.ipynb  batch_weight  class_count.py  crop.ipynb  ear_mar_ratio.ipynb  tesnor_process.py  time.ipynb
preprocessing/crop/: eye.ipynb  eye_preview.ipynb  head.ipynb  head_preview.ipynb  mouth.ipynb  mouth_preview.ipynb  note.md
preprocessing/utils/: count.ipynb  frame_count.ipynb  kaggle_login.ipynb  (+1 more)
quantize/: other.py
(+4 files in other folders)
